# Natural-Language-Driven-CLI

./: .gitignore  .nlcli_history  CONTRIBUTING.md  README.md  REAL_WORLD_TESTING_SUMMARY.md  nlcli_enterprise.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ADVANCED_USAGE.md  CONFIGURATION.md  INSTALLATION.md  PLUGIN_DEVELOPMENT.md  SECURITY.md
examples/: demo_real_world.py
examples/batch_scripts/: file_organization.nlcli  maintenance.nlcli
examples/plugins/: docker_plugin.py
src/nlcli/: __init__.py  advanced_context.py  batch.py  cloud_llm.py  context.py  engine.py  enterprise.py  error_recovery.py  executor.py  language.py  llm.py  main.py  performance.py  plugins.py  registry.py  safety.py  security.py  telemetry.py
src/nlcli/tools/: __init__.py  file_tools.py  git_tools.py  network_tools.py  package_tools.py  process_tools.py
tests/: test_advanced_context.py  test_batch.py  test_cli_integration.py  test_cloud_llm.py  test_language.py  test_llm.py  test_nlcli.py  test_phase2_tools.py  test_phase4_production.py  test_plugins.py  test_real_world_scenarios.py
